WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141410
Hit testing is misplaced when selecting on wikipedia page
https://bugs.webkit.org/show_bug.cgi?id=141410
Summary
Hit testing is misplaced when selecting on wikipedia page
Enrica Casucci
Reported
2015-02-09 15:42:34 PST
Repro steps: 1. Navigate to wikipedia.org 2. Type a search term in the search field 3. Press enter 4. After the page loads try to select something using long press. Results: The selection is either not visible at all or in the incorrect place.
rdar://problem/19768211
Attachments
Patch
(2.51 KB, patch)
2015-02-09 15:48 PST
,
Enrica Casucci
simon.fraser
: review-
Details
Formatted Diff
Diff
Patch2
(3.94 KB, patch)
2015-02-10 14:56 PST
,
Enrica Casucci
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2015-02-09 15:48:34 PST
Created
attachment 246301
[details]
Patch
Simon Fraser (smfr)
Comment 2
2015-02-09 15:51:17 PST
Comment on
attachment 246301
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=246301&action=review
> Source/WebKit2/WebProcess/WebPage/WebPage.cpp:4553 > + m_assistedNode = 0;
nullptr. Higher up is a if (!frame->isMainFrame()) return; check so what if the assisted node is in a subframe? I still think we should do this on teardown/caching of the previous document, not the loading of the new one.
Enrica Casucci
Comment 3
2015-02-10 14:56:39 PST
Created
attachment 246343
[details]
Patch2
Enrica Casucci
Comment 4
2015-02-10 15:02:55 PST
https://trac.webkit.org/r179885
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug